--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "expo-permissions": "~13.2.0",
     "lottie-react-native": "5.1.3",
     "expo-network": "~4.3.0",
-    "@react-native-community/netinfo": "9.3.0"
+    "@react-native-community/netinfo": "9.3.0",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
