--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
     "expo-camera": "~12.3.0",
     "expo-file-system": "~14.1.0",
     "expo-image-picker": "~13.3.1",
+    "expo-media-library": "~14.2.0",
+    "expo-network": "~4.3.0",
+    "expo-permissions": "~13.2.0",
     "expo-status-bar": "~1.4.0",
+    "lottie-react-native": "5.1.3",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
@@ -25,12 +31,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "expo-media-library": "~14.2.0",
-    "expo-permissions": "~13.2.0",
-    "lottie-react-native": "5.1.3",
-    "expo-network": "~4.3.0",
-    "@react-native-community/netinfo": "9.3.0",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "expo-image-manipulator": "~10.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
