--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo": "~46.0.16",
     "expo-camera": "~12.3.0",
     "expo-file-system": "~14.1.0",
+    "expo-image-manipulator": "~10.4.0",
     "expo-image-picker": "~13.3.1",
     "expo-media-library": "~14.2.0",
     "expo-network": "~4.3.0",
@@ -26,12 +27,9 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-flash-message": "^0.3.1",
-    "react-native-fs": "^2.20.0",
-    "react-native-image-base64": "^0.1.4",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "expo-image-manipulator": "~10.4.0"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
